SVM Iris example section is done

--- a/MachineLearning.ipynb
+++ b/MachineLearning.ipynb
@@ -1954,7 +1954,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 9. Classification: support vector machine\n",
+    "# 9. Classification: support vector machine (SVM)\n",
     "<hr style=\"height:1px;border:none\" />\n",
     "\n",
     "## The line must be drawn here\n",
@@ -2442,11 +2442,167 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 10. SVM example: iris data\n",
+    "<hr style=\"height:1px;border:none\" />\n",
+    "\n",
+    "## Multi-class SVM\n",
+    "\n",
+    "The concept of SVM makes sense for a binary classification problem. But what if there are more than 2 classes in the target? In that case, we can take two approaches:\n",
+    "\n",
+    "  * **One-versus-rest (OVR)**: In this approach, each class is compared to the rest of classes in a separate SVM. Then the predicted class label is based on the class that gives the largest distance from the boundary. \n",
+    "  * **One-versus-one (OVO)**: In this approach, all possible pairs of classes are compared with a 2-class SVM. For each observation, we count the number of times that observation has been classified to a particular class. The class with the most *vote* is selected as the predicted class.\n",
+    "  \n",
+    "By default, `SVC` uses the OVR approach, so we will use it for our next example.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example: iris data\n",
+    "\n",
+    "As you recall, there are 3 classes in the iris data. While one of the classes (Setosa) is separated well from the other classes, the remaining two classes are somewhat overlapping."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[`<IrisSVM.py>`](https://github.com/sathayas/fMRIClassFall2019/blob/master/MachineLearning/IrisSVM.py)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "from sklearn import datasets\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "\n",
+    "# Loading the iris data\n",
+    "iris = datasets.load_iris()\n",
+    "X = iris.data\n",
+    "y = iris.target\n",
+    "target_names = iris.target_names"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will be using 100 observations as the training data, and the remaining 50 as the testing data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# spliting the data into training and testing data sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, \n",
+    "                                                    test_size=50, \n",
+    "                                                    random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Will fit the training data with `C=0.1`, allowing softer margins."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SVM model fitting\n",
+    "sv = SVC(kernel='linear', C=0.1)\n",
+    "sv.fit(X_train,y_train)\n",
+    "\n",
+    "# SVM classifier\n",
+    "y_pred = sv.predict(X_test)   # predicted class\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's take a look at the classification results."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[16  0  0]\n",
+      " [ 0 18  1]\n",
+      " [ 0  0 15]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Confusion matrix\n",
+    "print(confusion_matrix(y_test,y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      setosa       1.00      1.00      1.00        16\n",
+      "  versicolor       1.00      0.95      0.97        19\n",
+      "   virginica       0.94      1.00      0.97        15\n",
+      "\n",
+      "    accuracy                           0.98        50\n",
+      "   macro avg       0.98      0.98      0.98        50\n",
+      "weighted avg       0.98      0.98      0.98        50\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# classification report\n",
+    "print(classification_report(y_test, y_pred, target_names=target_names))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So it did a good job."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 11. Kernel methods\n",
+    "<hr style=\"height:1px;border:none\" />\n",
+    "\n",
+    "The SVMs we have seen so far work well if boundaries are defined as straight lines. But let's consider this case."
+   ]
   }
  ],
  "metadata": {
