Removed deep learning stuff

--- a/Syllabus/Syllabus_fMRI_Fall2019.ipynb
+++ b/Syllabus/Syllabus_fMRI_Fall2019.ipynb
@@ -418,7 +418,7 @@
     "        <td style=\"text-align:center;\">Machine learning basics</td>\n",
     "        <td style=\"text-align:center;\"></td>\n",
     "        <td style=\"text-align:center;\">Satoru Hayasaka</td>\n",
-    "        <td style=\"text-align:center;\">Scikit-learn, nilearn, TensorFlow & Keras</td>\n",
+    "        <td style=\"text-align:center;\">Scikit-learn</td>\n",
     "        <td style=\"text-align:center;\"> </td>\n",
     "    </tr>\n",
     "    <tr>\n",
@@ -434,7 +434,7 @@
     "        <td style=\"text-align:center;\">Searchlight</td>\n",
     "        <td style=\"text-align:center;\">Kriegeskorte et al., PNAS 2006</td>\n",
     "        <td style=\"text-align:center;\">Allison Bruning</td>\n",
-    "        <td style=\"text-align:center;\">CNN with TensorFlow</td>\n",
+    "        <td style=\"text-align:center;\">Searchlight with Nilearn</td>\n",
     "        <td style=\"text-align:center;\"></td>\n",
     "    </tr>\n",
     "    <tr>\n",
