HW3 deadline changed; last class does not cover cloud computing

--- a/Syllabus/Syllabus_fMRI_Fall2019.ipynb
+++ b/Syllabus/Syllabus_fMRI_Fall2019.ipynb
@@ -443,15 +443,15 @@
     "        <td style=\"text-align:center;\"></td>\n",
     "        <td style=\"text-align:center;\">Satoru Hayasaka</td>\n",
     "        <td style=\"text-align:center;\">Final project kick-off</td>\n",
-    "        <td style=\"text-align:center;\">HW3 due</td>\n",
+    "        <td style=\"text-align:center;\"></td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "        <td style=\"text-align:center;\">12/9</td> \n",
-    "        <td style=\"text-align:center;\">Cloud computing</td>\n",
-    "        <td style=\"text-align:center;\">Avesani et al., PsyArXiv 2019</td>\n",
-    "        <td style=\"text-align:center;\">Satoru Hayasaka</td>\n",
+    "        <td style=\"text-align:center;\">Team meeting (optional)</td>\n",
+    "        <td style=\"text-align:center;\"></td>\n",
+    "        <td style=\"text-align:center;\"></td>\n",
     "        <td style=\"text-align:center;\">Final project presentations</td>\n",
-    "        <td style=\"text-align:center;\"> </td>\n",
+    "        <td style=\"text-align:center;\">HW3 due</td>\n",
     "    </tr>\n",
     "</table>"
    ]
@@ -473,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
